--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'java-library'
 }
 
-group = 'com.ist.one.framework'
-version = '1.0.0'
+group = 'com.core.katalon'
+version = '1.0.1'
 
 repositories {
     mavenCentral()
