--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.core.katalon'
-version = '2.0.0'
+version = '2.1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -21,7 +21,6 @@ dependencies {
     // Selenium & Appium (used by adapters)
     compileOnly 'org.seleniumhq.selenium:selenium-api:4.8.3'
     compileOnly 'io.appium:java-client:8.5.1'
-    compileOnly 'junit:junit:4.13.2'
 }
 
 jar {
